traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployement
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      serviceAccountName: traefik-service-account
      containers:
      - name: traefik
        image: traefik:1.7
        resources:
          limits:
            memory: "128M"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
        - containerPort: 8080
          name: admin
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                  - epitech-s4ql
                  - epitech-s4qe
            topologyKey: "kubernetes.io/hostname"
