worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
      - name: worker
        image: epitechcontent/t-dop-600-worker:k8s
        resources:
          limits:
            memory: "256M"
            cpu: "500m"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - epitech-s4qe
                      - epitech-s4ql
              topologyKey: "kubernetes.io/hostname"
