poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
  labels:
    app: poll
spec:
  selector:
    app: poll
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
