traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - port: 80
    targetPort: 8080
    name: cluster
  - port: 30021
    targetPort: 30042
    name: host
